k8s/model.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model
  template:
    metadata:
      labels:
        app: model
    spec:
      containers:
        - name: model
          image: model-image
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
  namespace: dev
spec:
  selector:
    app: model
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
